I add the slideNumber function , transition for the list when moved and appear and disappear function for the icon

--- a/src/components/list/list.scss
+++ b/src/components/list/list.scss
@@ -36,6 +36,8 @@
             display: flex;
             margin-top: 10px;
             width: max-content;
+            transform: translateX(0px);
+            transition: all 1s ease;
         }
     }
 }
