--- a/src/components/listItem/listitem.scss
+++ b/src/components/listItem/listitem.scss
@@ -1,6 +1,25 @@
 .listItem {
     width: 225px;
     height: 120px;
-    background-color: white;
+    background-color: var(--main-color);
     margin-left: 5px;
+    overflow: hidden;
+    cursor: pointer;
+    color: white;
+
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    &:hover{
+        width: 325px;
+        height: 300px;
+
+    }
+
+    img{
+        height: 140px;
+    }
 }
