I Finish the dash part and Authentification

--- a/client/src/pages/Login/Login.scss
+++ b/client/src/pages/Login/Login.scss
@@ -72,6 +72,7 @@
                 color: lightgray;
                 b {
                     color: white;
+                    cursor: pointer;
                 }
             }
         }
