--- a/client/src/app.scss
+++ b/client/src/app.scss
@@ -6,3 +6,17 @@
     color: inherit;
     text-decoration: none;
 }
+
+
+//make the app responsive
+
+@mixin tablet {
+    @media  (max-width : 768px) {
+        @content;
+    } //tablet size
+}
+@mixin mobile {
+    @media  (max-width : 480px) {
+        @content;
+    } //mobile size
+}
