--- a/client/src/components/Featured/featured.scss
+++ b/client/src/components/Featured/featured.scss
@@ -1,3 +1,6 @@
+@import "../../app.scss";
+
+
 .featured {
     height: 90vh;
     position: relative;
@@ -33,16 +36,20 @@
       position: absolute;
       left: 50px;
       bottom: 100px;
-      color: white;
+      color: rgb(255, 255, 255);
       display: flex;
       flex-direction: column;
   
       img {
-        width: 400px;
+        width: 60vw;
       }
   
       .desc {
         margin: 20px 0px;
+
+        @include mobile {
+          width: 60vw;
+        }
       }
   
       .buttons {
