--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -1,3 +1,5 @@
+@import "../../app.scss";
+
 .navbar{
     width: 100%;
     color: white;
@@ -21,15 +23,32 @@
         .left{
             display: flex;
             align-items: center;
-            img{
+            img {
                 height: 25px;
-                margin-right: 40px
+                margin-right: 40px;
+        
+                @include mobile {
+                    display: none;
+                }
             }
             span{
                 margin-right: 20px;
                 cursor: pointer;
                 &:hover{
                     border-bottom: 2px solid white;
+                }
+                @include tablet {
+                    display: none;
+                    &:hover{
+                        border-bottom: 2px solid white;
+                    }
+                }
+                
+
+                &.navbarMainLinks {
+                    @include tablet {
+                        display: block;
+                    }
                 }
             }
             
